<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learnvern"
        android:textSize="@dimen/textSize"
        android:textColor="@color/saffron"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginSize"
        android:hint="@string/hint"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/marginSize"/>

    <Button
        android:id="@+id/callButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/saffron"
        android:layout_margin="@dimen/descriptionSize"
        android:text="@string/buttonText"
        android:textSize="@dimen/descriptionSize"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:fontFamily="arial" />


</LinearLayout>